# IiTP_Labs

./: .gitignore
sem5/МДиСУБД/: Cargo.toml  README.md
sem5/МДиСУБД/diagrams/: er.puml  info.puml
sem5/МДиСУБД/sql/: docker-compose.yml  proc.sql  triggers.sql
sem5/МДиСУБД/sql/queries/auth/: client_create.sql  client_delete.sql  client_update.sql
sem5/МДиСУБД/sql/queries/client/: dropsites_get.sql  order_add_product.sql  order_confirm.sql  order_create.sql  order_delete_product.sql  order_get_for_client.sql  order_get_products.sql  order_get_total_price.sql  order_update_product.sql  payment_add.sql  payment_get.sql  product_get_for_order.sql  product_search.sql
sem5/МДиСУБД/sql/queries/logistician/: order_add_route_point.sql  order_delete_route_point.sql  order_get_route_points.sql  order_get_unrouted.sql  order_set_routed.sql  warehouses_get.sql
sem5/МДиСУБД/sql/queries/stats/: get_all_order_prices.sql  get_clients_total_paid.sql  get_clients_with_same_birthday.sql  get_nonempty_orders.sql  get_order_count_per_client.sql  get_order_total_price_with_avg.sql
sem5/МДиСУБД/sql/queries/warehouse/: order_confirm_arrived_here.sql  order_get_going_here.sql  order_get_here.sql
sem5/МДиСУБД/sql/schema/: create_indices.sql  create_tables.sql
sem5/МДиСУБД/sql/test_data/: more_clients.sql  test_data.sql
sem5/МДиСУБД/src/: common.rs  entities.rs  logger.rs  main.rs  tui.rs
sem5/МДиСУБД/src/use_cases/: auth.rs  mod.rs
sem5/МДиСУБД/src/use_cases/admin/: mod.rs  producer.rs  product.rs  user.rs  warehouse.rs
sem5/МДиСУБД/src/use_cases/client/: mod.rs  order.rs  (+1 more)
(+194 files in other folders)
