[package]
name = "mdisubd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = {version="0.5.3", features=["std"]}
async-trait = "0.1.89"
chrono = "0.4.42"
colored = "3.0.0"
tabled = {version = "0.20.0", features=["derive"] }
thiserror = "2.0.17"
tokio = {version = "1", features = ["full"]}

[dependencies.sqlx]
version = "0.8.6"
features = ["runtime-tokio", "postgres", "chrono", "bigdecimal"]
